--- a/1-Ramp up/0-Markdown/Markdown en Jupyter.ipynb
+++ b/1-Ramp up/0-Markdown/Markdown en Jupyter.ipynb
@@ -56,7 +56,18 @@
    "outputs": [],
    "source": [
     "# Esto es código de Python.\n",
-    "# Va a ser muy habitual en el curso, acompañar el código de Python mediante celdas de markdown."
+    "# Va a ser muy habitual en el curso, acompañar el código de Python mediante celdas de markdown.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lalala\n",
+    "# lalala\n",
+    "\n"
    ]
   },
   {
@@ -70,6 +81,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Markdown\n",
+    "\n",
     "## 2. Cabeceras\n",
     "Ya has visto que en el apartado anterior usábamos dos hashtag para poner una cabecera. ¿Por qué dos? Cuantos más hashtags, menor es el tamaño del título.\n"
    ]
@@ -77,7 +90,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Cabecera 1\n",
+    "## Cabecera 2\n",
+    "### Cabecera 3\n",
+    "#### Cabecera 4\n",
+    "##### Cabecera 5\n",
+    "###### Cabecera 6\n",
+    "####### Cabecera 7"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,7 +118,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<h1> Header1 </h1>\n",
+    "<h2> Header2 </h2>\n",
+    "<h3> Header3 </h3>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,7 +135,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "**Texto en negrita**\n",
+    "\n",
+    "*Texto en cursiva*\n",
+    "\n",
+    "***cursiva***"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -130,7 +161,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "> Rellenar\n",
+    ">> Rellenar"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -143,7 +177,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. Primer elemento\n",
+    "2. Segundo elemento"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -155,7 +192,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "* elemento 1\n",
+    "* elemento 2\n",
+    "- elemento 3\n",
+    "+ elemento 4"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -168,7 +210,20 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Markdown"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`codigo`\n",
+    "\n",
+    "```Python\n",
+    "str = \"Esto es codigo Python\"\n",
+    "```"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -181,7 +236,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "***\n",
+    "---\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -228,13 +286,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Markdown"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Imagen en el mismo directorio que el Notebook"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "![imagen](./error.png)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -246,7 +313,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "![imagen](./img/error.png)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -293,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
