--- a/1-Ramp up/1-Basics/Python Basics I.ipynb
+++ b/1-Ramp up/1-Basics/Python Basics I.ipynb
@@ -1537,10 +1537,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "4.0\n",
+      "<class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_var = \"\"\"texto con \"\" dobles \"\"\"\n",
+    "print(type(mi_var))\n",
+    "\n",
+    "mi_var2 = \"Otro texto\"\n",
+    "\n",
+    "mi_var + mi_var2\n",
+    "\n",
+    "entera = 4\n",
+    "print(float(entera))\n",
+    "print(type(float(entera)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1556,17 +1577,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "primer_input = input()\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alberto\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(primer_input)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1579,10 +1612,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Encantado de saludarte Alberto\n",
+      "Coincido\n"
+     ]
+    }
+   ],
+   "source": [
+    "nombre = input(\"¿Como te llamas?\")\n",
+    "print( \"Encantado de saludarte %s\" % (nombre) )\n",
+    "\n",
+    "feedback = input(\"¿Que te esta pareciendo Python?\")\n",
+    "print(\"Coincido\")\n",
+    "\n",
+    "print(feedback)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1599,14 +1649,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"int\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_22180/3806245076.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \"\"\"\n\u001b[0;32m      5\u001b[0m \u001b[0mnumero_input\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Introduce un numero\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mnumero_input\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Por defecto, el input del usuario es de tipo texto. Habrá que convertirlo a numerico con int(numero_input)\n",
     "o con float(numero_input). Lo vemos en el siguiente notebook.\n",
-    "\"\"\"\n"
+    "\"\"\"\n",
+    "numero_input = input(\"Introduce un numero\")\n",
+    "numero_input + 4"
    ]
   },
   {
@@ -1633,10 +1697,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Le mandamos las 53 pizzas a la direccion Recoletos 15 . Muchas gracias por su pedido.\n"
+     ]
+    }
+   ],
+   "source": [
+    "mensaje = \"Buenas tardes, bienvenido al servicio de pedido online, ¿cuantas pizzas desea?\"\n",
+    "pizz = input(mensaje)\n",
+    "direcc = input(\"Estupendo, se estan preparando \" + pizz + \" pizzas. Digame su direccion\")\n",
+    "print(\"Le mandamos las\", pizz, \"pizzas a la direccion\", direcc,\". Muchas gracias por su pedido.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1648,10 +1725,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "<class 'NoneType'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(None)\n",
+    "print(type(None))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1675,7 +1764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1696,10 +1785,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Zen of Python, by Tim Peters\n",
+      "\n",
+      "Beautiful is better than ugly.\n",
+      "Explicit is better than implicit.\n",
+      "Simple is better than complex.\n",
+      "Complex is better than complicated.\n",
+      "Flat is better than nested.\n",
+      "Sparse is better than dense.\n",
+      "Readability counts.\n",
+      "Special cases aren't special enough to break the rules.\n",
+      "Although practicality beats purity.\n",
+      "Errors should never pass silently.\n",
+      "Unless explicitly silenced.\n",
+      "In the face of ambiguity, refuse the temptation to guess.\n",
+      "There should be one-- and preferably only one --obvious way to do it.\n",
+      "Although that way may not be obvious at first unless you're Dutch.\n",
+      "Now is better than never.\n",
+      "Although never is often better than *right* now.\n",
+      "If the implementation is hard to explain, it's a bad idea.\n",
+      "If the implementation is easy to explain, it may be a good idea.\n",
+      "Namespaces are one honking great idea -- let's do more of those!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import this"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1710,9 +1829,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Primera linea\n",
+      "Variable declarada es: 12\n",
+      "Variable declarada es: 12\n",
+      "\n",
+      "\n",
+      "<class 'int'>\n",
+      "<class 'float'>\n",
+      "<class 'str'>\n",
+      "<class 'bool'>\n",
+      "\n",
+      "\n",
+      "<class 'int'>\n",
+      "<class 'str'>\n",
+      "<class 'bool'>\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "# Declarar variables\n",
     "var = 10\n",
