--- a/1-Ramp up/1-Basics/Python Basics II.ipynb
+++ b/1-Ramp up/1-Basics/Python Basics II.ipynb
@@ -65,10 +65,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20.0\n",
+      "100.0\n",
+      "10000000000.0\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "var_int = 10\n",
+    "var_float = 10.\n",
+    "var_sum = var_int + var_float\n",
+    "print(var_sum)\n",
+    "var_prod = var_int * var_float\n",
+    "print(var_prod)\n",
+    "var_pot = var_int ** var_float\n",
+    "print(var_pot)\n",
+    "print(12 % 5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -80,9 +101,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conmutativa\n",
+      "6\n",
+      "6\n",
+      "\n",
+      "Asociativa\n",
+      "16\n",
+      "16\n",
+      "\n",
+      "Distributiva\n",
+      "30\n",
+      "30\n",
+      "\n",
+      "El Orden de operaciones se mantiene. Siempre podemos usar paréntesis\n",
+      "50\n",
+      "1.7272727272727273\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Conmutativa\")\n",
     "print(2 * 3)\n",
@@ -118,10 +161,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n",
+      "4.0\n",
+      "1.5707963267948966\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "print(math.sqrt(25))\n",
+    "print(math.fabs(-4))\n",
+    "print(math.acos(0))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -152,18 +210,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_5172/1580332654.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;36m4\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
+     ]
+    }
+   ],
+   "source": [
+    "4/0"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "math domain error",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_5172/784593961.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Hay valores que se salen del dominio de algunas funciones matemáticas, como es el caso de las raices de números negativos\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mmath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m: math domain error"
+     ]
+    }
+   ],
    "source": [
-    "# Hay valores que se salen del dominio de algunas funciones matemáticas, como es el caso de las raices de números negativos\n"
+    "# Hay valores que se salen del dominio de algunas funciones matemáticas, como es el caso de las raices de números negativos\n",
+    "math.sqrt(-10)"
    ]
   },
   {
@@ -190,10 +275,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25.0\n",
+      "4\n",
+      "5\n",
+      "3.141592653589793\n",
+      "28.274333882308138\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "print(math.fabs(-25))\n",
+    "print(math.floor(4.7))\n",
+    "print(math.ceil(4.7))\n",
+    "print(math.pi)\n",
+    "print(math.pi * 3**2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -211,10 +316,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "False\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Asignacion\n",
+    "asign = 1\n",
+    "print(asign)\n",
+    "\n",
+    "# Comparacion\n",
+    "print(asign == 5)\n",
+    "print(asign)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -225,10 +348,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"AAA\" == \"BBB\")\n",
+    "print(\"AAA\" == \"AAA\")\n",
+    "\n",
+    "print(1 == 1)\n",
+    "print(1 == 1.0) # True, a pesar de que sean de distinto tipo\n",
+    "\n",
+    "print(67 != 93)\n",
+    "\n",
+    "print(67 > 93)\n",
+    "print(67 >= 93)\n",
+    "\n",
+    "print(True == 1)\n",
+    "print(True == 5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -252,18 +405,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(True == 6)\n",
+    "print(True == \"verdadero\")\n",
+    "print(6 == \"cadena\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "97\n"
+     ]
+    }
+   ],
    "source": [
-    "# Obtenemos un TypeError cuando la comparativa es de > o <\n"
+    "# Obtenemos un TypeError cuando la comparativa es de > o <\n",
+    "\n",
+    "print(ord(\"a\"))\n"
    ]
   },
   {
@@ -289,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,22 +498,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n",
+      "Resultado de si me encaja el ordenador 1:  False\n"
+     ]
+    }
+   ],
    "source": [
     "# Primero, calculamos el valor de estas condiciones por separado\n",
     "cond_ram1 = (ram1 == 16 or ram1 == 32 or ram1 == 64) # OR: me vale al menos un True para que se cumpla esta condicion\n",
     "cond_process1 = (process1 == \"i3\" and disco1 == 500) # AND: se tienen que cumplir ambas\n",
-    "cond_precio1 = (precio1 <= 800)"
+    "cond_precio1 = (precio1 <= 800)\n",
+    "\n",
+    "print(cond_ram1)\n",
+    "print(cond_process1)\n",
+    "print(cond_precio1)\n",
+    "\n",
+    "# Si lo ponemos todo junto en una línea, tendriamos\n",
+    "cond_tot1 = cond_ram1 and cond_process1 and cond_precio1\n",
+    "print(\"Resultado de si me encaja el ordenador 1: \", cond_tot1)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -347,9 +536,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resultado de si me encaje el ordenador 2:  False\n",
+      "Resultado de si me encaje el ordenador 3:  True\n"
+     ]
+    }
+   ],
    "source": [
     "cond_tot2 = (ram2 == 16 or ram2 == 32 or ram2 == 64) and (process2 == \"i3\" and disco2 == 500) and (precio2 <= 800)\n",
     "cond_tot3 = (ram3 == 16 or ram3 == 32 or ram3 == 64) and (process3 == \"i3\" and disco3 == 500) and (precio3 <= 800)\n",
@@ -391,9 +589,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resultado de si me encaja el ordenador 3:  False\n"
+     ]
+    }
+   ],
    "source": [
     "cond_tot3 = (ram3 == 16 or ram3 == 32 or ram3 == 64) and (process3 == \"i3\" and disco3 == 500) and (precio3 >= 800)\n",
     "\n",
@@ -468,14 +674,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "# Len se usa para calcular la longitud de una variable. Ya veras que lo usaremos mucho en colecciones\n",
+    "print(len(\"Este string\"))\n",
     "\n",
-    "\n",
-    "# Funcion max. Tiene tantos argumentos como cantidad de números entre los cuales queramos sacar su valor máximo.\n"
+    "# Funcion max. Tiene tantos argumentos como cantidad de números entre los cuales queramos sacar su valor máximo.\n",
+    "print(max(1,2,3,4))"
    ]
   },
   {
@@ -495,17 +711,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "temperaturas_de_hoy = [17, 22, 26, 18, 21, 21, 25, 29]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[29, 26, 25, 22, 21, 21, 18, 17]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(temperaturas_de_hoy, reverse = True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -524,9 +755,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Todo mayusculas: STRING EN MAYUSCULAS\n",
+      "Todo minusculas: string en mayusculas\n",
+      "Sustituir m por M: string en Mayusculas\n",
+      "Eliminar m: string en ayusculas\n",
+      "Separalo segun el numero de espacios: ['string', 'en', 'mayusculas']\n",
+      "'y' está en la posición: 12\n"
+     ]
+    }
+   ],
    "source": [
     "string_ejemplo = \"string en mayusculas\"\n",
     "\n",
@@ -573,13 +817,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "replace() takes at least 2 arguments (0 given)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_5172/3796210173.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Cuando un método necesita ciertos argumentos, y no se los proporcionamos\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mstring_ejemplo\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"string en mayusculas\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mstring_ejemplo\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: replace() takes at least 2 arguments (0 given)"
+     ]
+    }
+   ],
    "source": [
-    "# Cuando un método necesita ciertos argumentos, y no se los proporcionamos\n"
+    "# Cuando un método necesita ciertos argumentos, y no se los proporcionamos\n",
+    "string_ejemplo = \"string en mayusculas\"\n",
+    "string_ejemplo.replace()"
    ]
   },
   {
@@ -596,17 +854,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 6, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numeros_favoritos = [3,6,1]\n",
+    "print(numeros_favoritos)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ponme', 'otra']\n",
+      "[True, True, True, True]\n",
+      "['a', 'A', 'b', 'B']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# También podemos hacer listas de strings\n",
+    "strings_favoritos = [\"ponme\", \"otra\"]\n",
+    "print(strings_favoritos)\n",
+    "\n",
+    "# Listas de booleanos. Incluso con operaciones que se ejecutan al crearse la lista\n",
+    "bools_favoritos = [True, True, not False, True or False]\n",
+    "print(bools_favoritos)\n",
+    "\n",
+    "# Lista mezclada de elementos\n",
+    "mix_list = [\"texto\", 1, 7, 55.78, True, False]\n",
+    "\n",
+    "# Listas dentro de listas\n",
+    "list_list = [[], 4, \"diez\", [True, 43, \"mas texto\"]]\n",
+    "\n",
+    "# Concatena dos listas\n",
+    "lista_a = ['a', 'A']\n",
+    "lista_b = ['b', 'B']\n",
+    "lista_ab = lista_a + lista_b\n",
+    "print(lista_ab)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -619,10 +918,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(list_list)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -633,10 +945,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista_len = [1,2,3,4]\n",
+    "len(lista_len)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -652,7 +978,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lista_index = [4,5,7,8]\n",
+    "print(lista_index[0])\n",
+    "print(lista_index[1])\n",
+    "print(lista_index[2])\n",
+    "print(lista_index[3])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -664,10 +996,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Mates', 'Fisica', 'Inglés']\n",
+      "['Mates', 'Fisica', 'Inglés', 'Quimica']\n",
+      "1\n",
+      "None\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "asignaturas = [\"Mates\", \"Fisica\", \"Inglés\"]\n",
+    "print(asignaturas)\n",
+    "\n",
+    "# Para agregar nuevos elementos. No hace falta reasignarlo a la lista. Simplemente, se añade al objeto asignaturas.\n",
+    "asignaturas.append(\"Quimica\")\n",
+    "print(asignaturas)\n",
+    "\n",
+    "# Obtener el indice de un elemento de la lista\n",
+    "print(asignaturas.index(\"Fisica\"))\n",
+    "\n",
+    "# Eliminar todos los elementos. Fijate que devuelve None, el elemento vacio.\n",
+    "asignaturas.clear()\n",
+    "print(asignaturas.clear())\n",
+    "print(asignaturas)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -704,9 +1063,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Operaciones matemáticas\n",
+      "10\n",
+      "18\n",
+      "16\n",
+      "2.0\n",
+      "1\n",
+      "1024\n",
+      "5.0\n",
+      "\n",
+      "Operaciones comparativas\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "\n",
+      "Operaciones con booleanos\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "\n",
+      "Funciones built-in\n",
+      "FIN DEL NOTEBOOK\n",
+      "fin del notebook\n",
+      "Fin del nOtebOOk\n",
+      "Fin del ntebk\n",
+      "\n",
+      "Listas\n",
+      "['AC/DC', 'Metallica', 'Nirvana', 'Queen']\n"
+     ]
+    }
+   ],
    "source": [
     "# Operaciones matemáticas\n",
     "print(\"Operaciones matemáticas\")\n",
@@ -773,7 +1170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
