--- a/1-Ramp up/1-Basics/Ejercicios Python Basics I.ipynb
+++ b/1-Ramp up/1-Basics/Ejercicios Python Basics I.ipynb
@@ -26,10 +26,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¿Por qué esta magnífica tecnología científica,\n",
+      "\tque ahorra trabajo y nos hace la vida mas fácil,\n",
+      "\t\tnos aporta tan poca felicidad?\n",
+      "\t\t\tLa repuesta es está, simplemente: porque aún no hemos aprendido a usarla con tino.\n",
+      " \"Albert Einstein\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"¿Por qué esta magnífica tecnología científica,\\n\\tque ahorra trabajo y nos hace la vida mas fácil,\\n\\t\\tnos aporta tan poca felicidad?\\n\\t\\t\\tLa repuesta es está, simplemente: porque aún no hemos aprendido a usarla con tino.\\n \\\"Albert Einstein\\\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "¿Por qué esta magnífica tecnología científica,\n",
+      "\tque ahorra trabajo y nos hace la vida mas fácil,\n",
+      "\t\tnos aporta tan poca felicidad?\n",
+      "\t\t\tLa repuesta es está, simplemente: porque aún no hemos aprendido a usarla con tino.\n",
+      " \"Albert Einstein\"\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "mensaje = \"\"\"\n",
+    "¿Por qué esta magnífica tecnología científica,\n",
+    "\tque ahorra trabajo y nos hace la vida mas fácil,\n",
+    "\t\tnos aporta tan poca felicidad?\n",
+    "\t\t\tLa repuesta es está, simplemente: porque aún no hemos aprendido a usarla con tino.\n",
+    " \"Albert Einstein\"\n",
+    "\"\"\"\n",
+    "print(mensaje)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -46,10 +90,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Castellana 24 Madrid 26774\n"
+     ]
+    }
+   ],
+   "source": [
+    "nom_calle = \"Castellana\"\n",
+    "num_calle = 24\n",
+    "pobl = \"Madrid\"\n",
+    "cp = 26774\n",
+    "total = nom_calle + \" \" + str(num_calle) + \" \" + pobl + \" \" + str(cp)\n",
+    "print(total)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,10 +120,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Castellana 24 Madrid 26774\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nom_calle,  num_calle, pobl, cp)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,7 +150,7 @@
     "5. exec = True\n",
     "6. import = 40\n",
     "7. 81mi_variable = \"Agua\"\n",
-    "8. mi_variable10 = 6"
+    "8. mi_variable10 = 6\n"
    ]
   },
   {
@@ -110,10 +179,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El equivalente en grados Fahrenheit es 41.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "C = input('Introduzca grados celsius: ')\n",
+    "F = 32 + float(C) * 9/5\n",
+    "\n",
+    "print(\"El equivalente en grados Fahrenheit es\", F)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -125,10 +207,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El equivalente en grados Fahrenheit es 41.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Calculadora de grados Fahrenheit\n",
+    "\"\"\"\n",
+    "C = input('Introduzca grados celsius: ') # Input del usuario\n",
+    "\n",
+    "# Hay que covertir los tipos para que no haya problemas\n",
+    "F = 32 + float(C) * float(9/5)\n",
+    "\n",
+    "print(\"El equivalente en grados Fahrenheit es\", F)"
+   ]
   }
  ],
  "metadata": {
@@ -147,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
