--- a/1-Ramp up/0-Markdown/Ejercicios markdown.ipynb
+++ b/1-Ramp up/0-Markdown/Ejercicios markdown.ipynb
@@ -23,7 +23,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Aptitudes de Data Scietist\n",
+    "> **Lo más importante**\n",
+    ">\n",
+    "> - Matemáticas\n",
+    "> - Programación\n",
+    "> - SQL\n",
+    "> - Python\n",
+    "> ![imagen](./img/python.png)\n",
+    ">\n",
+    "> Otro tema importante es el *Business Intelligence*.\n",
+    ">\n",
+    "> Si tienes dudas, pudes escribirme a: <alberto@thebridgeschool.es>\n",
+    ">\n",
+    "> En esta página se aprende mucho de machine learning: **[pagina con ML](https://www.kaggle.com/)**\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -43,7 +58,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "|Ramp Up|Data Analysis|Machine Learning|Data & Business|\n",
+    "|:--|:--|:--|:--|\n",
+    "|Python|EDA     |Supervised     |Productivización|\n",
+    "|Estadística|R     |Non supervised     |Storytelling|\n",
+    "|SQL|Feat. Eng.|Deep Learning |API|\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "$$\\sqrt{3x-1}+(1+x)^2$$"
+   ]
   }
  ],
  "metadata": {
@@ -62,7 +88,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
