--- a/1-Ramp up/3-Colecciones/Python Colecciones.ipynb
+++ b/1-Ramp up/3-Colecciones/Python Colecciones.ipynb
@@ -34,14 +34,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "Enero\n",
+      "Marzo\n"
+     ]
+    }
+   ],
    "source": [
     "# Listas de números, strings, booleanos, con elementos repetidos, listas anidadas...\n",
     "nums = [6, 2, 8, 3, 4, 5, 5]\n",
     "months = [\"Enero\", \"Febrero\", \"Marzo\"]\n",
-    "mix = [5, 7, \"Abril\", True, None, [\"Blanco\", \"Negro\"]]"
+    "mix = [5, 7, \"Abril\", True, None, [\"Blanco\", \"Negro\"]]\n",
+    "\n",
+    "# Longitud de la lista\n",
+    "print(len(nums))\n",
+    "\n",
+    "# Indexación\n",
+    "print(months[0])\n",
+    "print(months[len(months)-1]) # -1 porque len = 3 y el orden de los elementos es [0,1,2]"
    ]
   },
   {
@@ -54,11 +71,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Enero', 'Febrero', 'Marzo']\n",
+      "Enero\n",
+      "Febrero\n",
+      "Marzo\n",
+      "\n",
+      "\n",
+      "Marzo\n",
+      "Febrero\n"
+     ]
+    }
+   ],
    "source": [
-    "months = [\"Enero\", \"Febrero\", \"Marzo\"]"
+    "months = [\"Enero\", \"Febrero\", \"Marzo\"]\n",
+    "\n",
+    "print(months)\n",
+    "print(months[0])\n",
+    "print(months[1])\n",
+    "print(months[2])\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# Si lo que queremos es acceder al ultimo, o penultimo\n",
+    "print(months[-1])\n",
+    "print(months[-2])"
    ]
   },
   {
@@ -70,11 +113,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Enero', 'Febrero', 'Marzo', 'Marzo']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "months = [\"Enero\", \"Febrero\", \"Marzo\", \"Marzo\"]"
+    "months = [\"Enero\", \"Febrero\", \"Marzo\", \"Marzo\"]\n",
+    "\n",
+    "print(months)\n",
+    "\n",
+    "months.index(\"Marzo\") # Devuelve el indice de la primera ocurrencia"
    ]
   },
   {
@@ -86,11 +151,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[15, 26]\n"
+     ]
+    }
+   ],
    "source": [
-    "degrees = [22, 34, 15, 26, 18, 22]"
+    "degrees = [22, 34, 15, 26, 18, 22]\n",
+    "\n",
+    "print(degrees[2:4])"
    ]
   },
   {
@@ -103,12 +178,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Enero', 'Febrero', 'Marzo']\n",
+      "['Enero', 'Febrero', 'Abril']\n"
+     ]
+    }
+   ],
    "source": [
     "# Accediendo mediante el indice\n",
-    "months = [\"Enero\", \"Febrero\", \"Marzo\"]"
+    "months = [\"Enero\", \"Febrero\", \"Marzo\"]\n",
+    "\n",
+    "print(months)\n",
+    "\n",
+    "months[2] = \"Abril\"\n",
+    "print(months)"
    ]
   },
   {
@@ -121,21 +210,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['honda', 'yamaha', 'suzuki']\n",
+      "['honda', 'yamaha', 'suzuki', 'ducati']\n",
+      "['honda', 'yamaha', 'kawasaki', 'suzuki', 'ducati']\n"
+     ]
+    }
+   ],
    "source": [
     "# Con append lo añadimos al final de la lista\n",
-    "motorcycles = ['honda', 'yamaha', 'suzuki']"
+    "motorcycles = ['honda', 'yamaha', 'suzuki']\n",
+    "print(motorcycles)\n",
+    "\n",
+    "motorcycles.append('ducati')\n",
+    "print(motorcycles)\n",
+    "\n",
+    "# Con insert lo añadimos donde queramos\n",
+    "motorcycles.insert(2, 'kawasaki')\n",
+    "print(motorcycles)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['honda', 'yamaha', 'suzuki']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Es muy comun crear una lista vacia, y a lo largo del programa, ir añadiendo elementos"
+    "# Es muy comun crear una lista vacia, y a lo largo del programa, ir añadiendo elementos\n",
+    "\n",
+    "motorcycles = []\n",
+    "\n",
+    "motorcycles.append('honda')\n",
+    "motorcycles.append('yamaha')\n",
+    "motorcycles.append('suzuki')\n",
+    "print(motorcycles)"
    ]
   },
   {
@@ -150,21 +272,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['VW', 'Seat', 'BMW', 'VW']\n",
+      "['Seat', 'BMW', 'VW']\n"
+     ]
+    }
+   ],
    "source": [
-    "cars = [\"VW\", \"Seat\", \"BMW\", \"VW\"]"
+    "cars = [\"VW\", \"Seat\", \"BMW\", \"VW\"]\n",
+    "print(cars)\n",
+    "\n",
+    "cars.remove(\"VW\") # Elimina el primer elemento únicamente\n",
+    "print(cars)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['VW', 'Seat', 'BMW', 'VW']\n",
+      "['VW', 'BMW', 'VW']\n",
+      "Seat\n",
+      "['VW', 'BMW']\n",
+      "VW\n"
+     ]
+    }
+   ],
    "source": [
     "# Eliminar elementos por indice, y guarda ese valor en una variable\n",
-    "cars = [\"VW\", \"Seat\", \"BMW\", \"VW\"]"
+    "cars = [\"VW\", \"Seat\", \"BMW\", \"VW\"]\n",
+    "print(cars)\n",
+    "\n",
+    "seat = cars.pop(1)\n",
+    "print(cars)\n",
+    "print(seat)\n",
+    "\n",
+    "# Si no ponemos argumentos, devuelve el ultimo elemento\n",
+    "ult = cars.pop()\n",
+    "print(cars)\n",
+    "print(ult)"
    ]
   },
   {
@@ -182,11 +339,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['VW', 'Seat', 'BMW', 'VW']\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "list.remove(x): x not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_15312/2208715121.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcars\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mcars\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Audi\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m: list.remove(x): x not in list"
+     ]
+    }
+   ],
    "source": [
-    "cars = [\"VW\", \"Seat\", \"BMW\", \"VW\"]"
+    "cars = [\"VW\", \"Seat\", \"BMW\", \"VW\"]\n",
+    "\n",
+    "print(cars)\n",
+    "\n",
+    "cars.remove(\"Audi\")"
    ]
   },
   {
@@ -199,11 +379,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[22, 34, 15, 26, 18, 22]\n",
+      "[15, 18, 22, 22, 26, 34]\n",
+      "6\n",
+      "[34, 26, 22, 22, 18, 15]\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
-    "degrees = [22, 34, 15, 26, 18, 22]"
+    "degrees = [22, 34, 15, 26, 18, 22]\n",
+    "print(degrees)\n",
+    "\n",
+    "# Ordenar\n",
+    "degrees.sort()\n",
+    "print(degrees)\n",
+    "\n",
+    "# Tamaño de la lista\n",
+    "print(len(degrees))\n",
+    "\n",
+    "# Invertir el orden\n",
+    "degrees.reverse()\n",
+    "print(degrees)\n",
+    "\n",
+    "# Ocurrencia de un valor\n",
+    "print(degrees.count(22))\n"
    ]
   },
   {
@@ -230,11 +437,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[22, 34, 15, 26, 18, 22]\n",
+      "22\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_15312/2477950088.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdegrees\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mdegrees\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
-    "degrees = [22, 34, 15, 26, 18, 22]"
+    "degrees = [22, 34, 15, 26, 18, 22]\n",
+    "print(degrees)\n",
+    "print(degrees[-1])\n",
+    "\n",
+    "degrees[6]"
    ]
   },
   {
