--- a/1-Ramp up/4-Funciones/Funciones.ipynb
+++ b/1-Ramp up/4-Funciones/Funciones.ipynb
@@ -396,7 +396,7 @@
    ],
    "source": [
     "def excur_montania(tiempo, amigos):\n",
-    "    if tiempo == True and len(amigos) > 1:\n",
+    "    if tiempo == True and len(amigos) > 1: # if tiempo and len(amigos) > 1:\n",
     "        return amigos[0]\n",
     "    elif tiempo == True:\n",
     "        return \"Hoy salimos\"\n",
@@ -713,7 +713,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def marcas_coche(*marcas):\n",
+    "    tot = ''\n",
+    "    for marca in marcas:\n",
+    "        tot = tot + marca + ','\n",
+    "    return tot[:-1]\n",
+    "\n",
+    "marcas_coche(\"Mazda\", \"BMW\", \"VW\")"
+   ]
   },
   {
    "cell_type": "markdown",
