--- a/1-Ramp up/1-Basics/Ejercicios Python Basics II.ipynb
+++ b/1-Ramp up/1-Basics/Ejercicios Python Basics II.ipynb
@@ -28,10 +28,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'float'>\n",
+      "<class 'float'>\n",
+      "10.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "var1 = 4\n",
+    "var2 = 6.0\n",
+    "\n",
+    "print(type(var1))\n",
+    "print(type(var2))\n",
+    "\n",
+    "var3 = var1 + var2\n",
+    "\n",
+    "print(type(var3))\n",
+    "print(var3)\n",
+    "\n",
+    "del var1, var2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -45,10 +69,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.285714285714286\n"
+     ]
+    }
+   ],
+   "source": [
+    "pi=22/7\n",
+    "degree = float(input(\"Input grados: \"))\n",
+    "radian = degree*(pi/180)\n",
+    "print(radian)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -60,10 +97,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Area is:  10.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "base = float(input('Length of base: '))\n",
+    "height = float(input('Measurement of height: '))\n",
+    "\n",
+    "area = base * height\n",
+    "print(\"Area is: \", area)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -88,10 +139,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = 4\n",
+    "B = \"Text\"\n",
+    "C = 4.1\n",
+    "\n",
+    "print(A == B)\n",
+    "print(A != C)\n",
+    "print(A > C)\n",
+    "print(C <= A)\n",
+    "print(B != C)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -103,10 +176,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "inp_1 = input(\"Input 1: \")\n",
+    "inp_2 = input(\"Input 2: \")\n",
+    "print(inp_1 == inp_2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -118,10 +203,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Todos son iguales: False\n",
+      "Todos son iguales: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "inp_1 = input(\"Input 1: \")\n",
+    "inp_2 = input(\"Input 2: \")\n",
+    "inp_3 = input(\"Input 3: \")\n",
+    "\n",
+    "todos = inp_1 == inp_2 and inp_1 == inp_3 and inp_2 == inp_3 \n",
+    "print(\"Todos son iguales:\", todos)\n",
+    "\n",
+    "dos = inp_1 == inp_2 or inp_1 == inp_3 or inp_2 == inp_3\n",
+    "print(\"Todos son iguales:\", dos)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,10 +237,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Es mayor que 10: False\n",
+      "Es menor que 10: True\n",
+      "Es igual que 10: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "inp_1 = input(\"Input 1: \")\n",
+    "inp_2 = input(\"Input 2: \")\n",
+    "\n",
+    "suma = float(inp_1) + float(inp_2)\n",
+    "\n",
+    "print(\"Es mayor que 10:\", suma > 10)\n",
+    "print(\"Es menor que 10:\", suma < 10)\n",
+    "print(\"Es igual que 10:\", suma == 10)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -154,10 +277,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. \n",
-    "2. \n",
-    "3. \n",
-    "4. "
+    "1. False\n",
+    "2. False\n",
+    "3. False\n",
+    "4. False"
    ]
   },
   {
@@ -175,10 +298,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "17\n",
+      "63.451\n",
+      "74\n",
+      "74.0\n",
+      "74\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(max([4, 6, 8, -1]))\n",
+    "print(sum([4, 6, 8, -1]))\n",
+    "print(round(63.451256965, 3))\n",
+    "print(abs(-74))\n",
+    "\n",
+    "# Valor absoluto\n",
+    "print(abs(-74.0))\n",
+    "import math\n",
+    "print(int(math.fabs(-74)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -199,10 +345,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A QUIEN MADRUGA, DIOS LE AYUDA\n",
+      "a quien madruga, dios le ayuda\n",
+      "A Quien Madruga, Dios Le Ayuda\n",
+      "['A', 'quien', 'madruga,', 'dios', 'le', 'ayuda']\n",
+      "A quien madruga; dios le ayuda\n",
+      "A quien mdrug, dios le yud\n"
+     ]
+    }
+   ],
+   "source": [
+    "ej_10 = \"A quien madruga, dios le ayuda\"\n",
+    "print(ej_10.upper())\n",
+    "print(ej_10.lower())\n",
+    "print(ej_10.title())\n",
+    "print(ej_10.split(' '))\n",
+    "print(ej_10.replace(',', ';'))\n",
+    "print(ej_10.replace('a', ''))\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -219,10 +387,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "[2, 3, 4]\n",
+      "[2, 3, 5, 4]\n",
+      "[2, 3, 5, 4, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_11 = [1, 2, 3]\n",
+    "list_11.append(4)\n",
+    "print(sum(list_11))\n",
+    "\n",
+    "list_11.remove(1)\n",
+    "print(list_11)\n",
+    "\n",
+    "list_11.insert(2, 5)\n",
+    "print(list_11)\n",
+    "\n",
+    "list_11_2 = [6, 7, 8, 9]\n",
+    "print(list_11 + list_11_2)"
+   ]
   }
  ],
  "metadata": {
@@ -241,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
