--- a/1-Ramp up/2-Flujos de control/Ejercicios bucles.ipynb
+++ b/1-Ramp up/2-Flujos de control/Ejercicios bucles.ipynb
@@ -20,17 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "Unable to start Kernel 'Python 3.7.4 64-bit' due to connection timeout. \n",
-      "View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Audi', 'Renault', 'BMW']\n"
      ]
     }
    ],
@@ -45,9 +42,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Audi', 'Renault', 'BMW']\n"
+     ]
+    }
+   ],
    "source": [
     "ejer_1 = [\"VW\", \"Audi\", \"Renault\", \"VW\", \"BMW\"]\n",
     "\n",
@@ -62,9 +67,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "[]\n",
+      "1\n",
+      "['Audi']\n",
+      "2\n",
+      "['Audi', 'Renault']\n",
+      "3\n",
+      "['Audi', 'Renault']\n",
+      "4\n",
+      "['Audi', 'Renault', 'BMW']\n",
+      "\n",
+      "Fin del bucle: ['Audi', 'Renault', 'BMW']\n"
+     ]
+    }
+   ],
    "source": [
     "ejer_1 = [\"VW\", \"Audi\", \"Renault\", \"VW\", \"BMW\"]\n",
     "\n",
@@ -94,10 +118,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n",
+      "-1\n",
+      "-2\n",
+      "-3\n",
+      "-4\n",
+      "-5\n",
+      "-6\n",
+      "-7\n",
+      "-8\n",
+      "-9\n",
+      "-10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10, -11, -1):\n",
+    "    print(i)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,17 +165,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El sumatorio de todos los enteros positivos es de 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "suma = 0\n",
+    "num = None\n",
+    "\n",
+    "while num != 0:\n",
+    "    num = int(input(\"Introduzca un numero de teclado: \"))\n",
+    "\n",
+    "    if num > 0:\n",
+    "        suma +=num\n",
+    "\n",
+    "print(\"El sumatorio de todos los enteros positivos es de\", suma)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El sumatorio de todos los enteros positivos es de 6\n",
+      "Los numeros fueron [1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numeros = []\n",
+    "num = None\n",
+    "\n",
+    "while num != 0:\n",
+    "    num = int(input(\"Introduzca un numero de teclado\"))\n",
+    "\n",
+    "    if num > 0:\n",
+    "        numeros.append(num)\n",
+    "\n",
+    "print(\"El sumatorio de todos los enteros positivos es de\", sum(numeros))\n",
+    "print(\"Los numeros fueron\", numeros)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -132,10 +227,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numero negativo, por favor, introduzca un numero positivo: \n",
+      "Numero negativo, por favor, introduzca un numero positivo: \n",
+      "Total de compras 7\n"
+     ]
+    }
+   ],
    "source": [
+    "\n",
+    "ingreso = None\n",
+    "suma = 0\n",
+    "\n",
+    "while ingreso != 0:\n",
+    "    ingreso = int(input(\"Introduzca la cantidad de compra: \"))\n",
+    "\n",
+    "    if ingreso > 0:\n",
+    "        suma += ingreso\n",
+    "    else:\n",
+    "        print(\"Numero negativo, por favor, introduzca un numero positivo: \")\n",
+    "\n",
+    "print(\"Total de compras\", suma)\n",
     "\n"
    ]
   },
@@ -149,17 +267,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n\n",
+      "o\n",
+      "h\n",
+      "t\n",
+      "y\n",
+      "P\n"
+     ]
+    }
+   ],
+   "source": [
+    "palabra = \"Python\"\n",
+    "\n",
+    "for i in range(len(palabra)-1, -1, -1):\n",
+    "    print(palabra[i])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n\n",
+      "o\n",
+      "h\n",
+      "t\n",
+      "y\n",
+      "P\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in reversed(palabra):\n",
+    "    print(i)\n",
+    "\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -172,10 +326,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numero de veces que aparece m: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "frase = \"En un lugar de La Mancha, de cuyo nombre no quiero acordarme\"\n",
+    "count_m = 0\n",
+    "\n",
+    "for i in frase.lower():\n",
+    "    if i == \"m\":\n",
+    "        count_m = count_m +1\n",
+    "print(\"Numero de veces que aparece m:\", count_m)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -199,10 +369,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W W W W W \n",
+      "W W W W \n",
+      "W W W \n",
+      "W W \n",
+      "W \n"
+     ]
+    }
+   ],
+   "source": [
+    "caracter = input(\"Introduzca un caracter\")\n",
+    "num_filas = 5\n",
+    "\n",
+    "for i in range(num_filas):\n",
+    "\n",
+    "    for j in range(num_filas -i):\n",
+    "        print(caracter, end = \" \")\n",
+    "\n",
+    "    print(\"\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -226,10 +418,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 1 2 3 4 5\n",
+      " 1 2 3 4\n",
+      " 1 2 3\n",
+      " 1 2\n",
+      " 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "filas = int(input(\"Introduzca un numero: \"))\n",
+    "\n",
+    "for i in range(filas):\n",
+    "\n",
+    "    out = \"\"\n",
+    "    for j in range(filas-i):\n",
+    "        out = out + \" \" + str(j+1)\n",
+    "\n",
+    "    print(out)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -256,11 +470,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "* \n",
+      "* * \n",
+      "* * * \n",
+      "* * * * \n",
+      "* * * * * \n",
+      "* * * * \n",
+      "* * * \n",
+      "* * \n",
+      "* \n"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "n = 5\n",
+    "for i in range(n):\n",
+    "    for j in range(i):\n",
+    "        \n",
+    "        print(\"*\", end=\" \")\n",
+    "    print(\"\")\n",
+    "\n",
+    "for i in range(n,0,-1):\n",
+    "    for j in range(i):\n",
+    "        print('*', end=\" \")\n",
+    "    print(\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* \n",
+      "* * \n",
+      "* * * \n",
+      "* * * * \n",
+      "* * * * * \n",
+      "* * * * \n",
+      "* * * \n",
+      "* * \n",
+      "* \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "estrellas = 5\n",
+    "num=1\n",
+    "while estrellas > 0 and estrellas <= 5:\n",
+    "    print(\"* \" * num)\n",
+    "    num += 1\n",
+    "    estrellas -= 1\n",
+    "    if estrellas == 0:\n",
+    "        num -= 1\n",
+    "        estrellas +=1\n",
+    "        num -= 1\n",
+    "        print(\"* \" * num)\n",
+    "        while num < 5:\n",
+    "            num -= 1\n",
+    "            print(\"* \" * num)\n",
+    "            estrellas += 1\n",
+    "            if estrellas == 5:\n",
+    "                break\n",
+    "        break"
    ]
   },
   {
@@ -273,10 +557,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "10\n",
+      "1\n",
+      "2\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "10\n",
+      "1\n",
+      "2\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# uno\n",
+    "for i in range(1,11):\n",
+    "    if i not in [3,4,9]:\n",
+    "        print(i)\n",
+    "\n",
+    "#dos\n",
+    "for i in range(1,11):\n",
+    "    if i != 3 and i != 4 and i!= 9:\n",
+    "        print(i)\n",
+    "\n",
+    "#tres\n",
+    "for i in range(1,11):\n",
+    "    if i in [3,4,9]:\n",
+    "        continue\n",
+    "\n",
+    "    print(i)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -291,10 +620,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2.0]\n",
+      "[2.0, 10.0]\n",
+      "[2.0, 10.0, 7.142857142857143]\n",
+      "[2.0, 10.0, 7.142857142857143, <class 'ZeroDivisionError'>]\n",
+      "[2.0, 10.0, 7.142857142857143, <class 'ZeroDivisionError'>, 24.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ingresos = [100, 200, 500, 100, 600]\n",
+    "gastos = [50, 20, 70, 0, 25]\n",
+    "ratio = []\n",
+    "for i in range(len(ingresos)):\n",
+    "    try:\n",
+    "        ratio.append(ingresos[i] / gastos [i])\n",
+    "        print(ratio)\n",
+    "    except ZeroDivisionError:      #controlando el error concreto\n",
+    "        ratio.append(ZeroDivisionError)\n",
+    "        print(ratio)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'ZeroDivisionError'>\n",
+      "[2.0, 10.0, 7.142857142857143, 9999, 24.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ingresos = [100, 200, 500, 100, 600]\n",
+    "gastos = [50, 20, 70, 0, 25]\n",
+    "\n",
+    "ing_gasto = []\n",
+    "\n",
+    "for i in range(len(ingresos)):\n",
+    "    try:\n",
+    "        ing_gasto.append(ingresos[i]/gastos[i])\n",
+    "        \n",
+    "    except ZeroDivisionError:\n",
+    "        print(ZeroDivisionError)\n",
+    "        ing_gasto.append(9999)\n",
+    "    \n",
+    "print(ing_gasto)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -310,10 +693,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'TypeError'>\n",
+      "<class 'ZeroDivisionError'>\n",
+      "<class 'IndexError'>\n",
+      "<class 'IndexError'>\n",
+      "[2.0, 'TypeError', 7.142857142857143, 'Zero division error', 24.0, 'Index Error', 'Index Error']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ingresos = [100, \"HHH\", 500, 100, 600, 900, 150]\n",
+    "gastos = [50, 20, 70, 0, 25]\n",
+    "\n",
+    "ing_gasto = []\n",
+    "\n",
+    "for i in range(len(ingresos)):\n",
+    "    try:\n",
+    "        ing_gasto.append(ingresos[i]/gastos[i])\n",
+    "\n",
+    "    except ZeroDivisionError:\n",
+    "        print(ZeroDivisionError)\n",
+    "        ing_gasto.append(\"Zero division error\")\n",
+    "\n",
+    "    except IndexError:\n",
+    "        print(IndexError)\n",
+    "        ing_gasto.append(\"Index Error\")\n",
+    "\n",
+    "    except TypeError:\n",
+    "        print(TypeError)\n",
+    "        ing_gasto.append(\"TypeError\")\n",
+    "\n",
+    "print(ing_gasto)"
+   ]
   }
  ],
  "metadata": {
@@ -332,7 +750,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
